IE scrollbar fix

--- a/app/stylesheets/routes/_new_addressbook.scss
+++ b/app/stylesheets/routes/_new_addressbook.scss
@@ -622,8 +622,6 @@
 
       &:focus{
         a {
-          display: inline-block;
-          overflow-x: scroll;
           width: 100%;
           margin-bottom: -5px;
         }
